# Guitar-PlusPlus

./: .gitignore  .gitmodules  CFonts.cpp  CFonts.h  CGamePlay.cpp  CGamePlay.h  CMakeLists.txt  CSocket.h  Guitar++.sln  README.md
.github/workflows/: BuildGuitarPP.yml
Guitar++/: CAudio.cpp  CAudio.h  CCampaing.cpp  CCampaing.h  CChart.cpp  CChart.h  CCharter.cpp  CCharter.h  CControls.cpp  CControls.h  CEngine.cpp  CEngine.h  CFonts.cpp  CFonts.h  CGPPFileMGR.cpp  CGPPFileMGR.h  CGamePlay.cpp  CGamePlay.h  CGuitars.cpp  CGuitars.h  CLanguageManager.cpp  CLanguageManager.h  CLog.cpp  CLog.h  CLuaFunctions.cpp  CLuaFunctions.hpp  CLuaH.cpp  CLuaH.hpp  CMakeLists.txt  CMenu.cpp  CMenu.h  CMultiThreadPool.h  CMultiplayer.cpp  CMultiplayer.h  CParticle.cpp  CParticle.h  CPlayer.cpp  CPlayer.h  CSaveSystem.cpp  CSaveSystem.h  (+30 more)
Guitar++/Lua/: lstate.h  lua.c  luac.c
bass/: README.md
enc_temp_folder/6076359667de2e20d3f0b66a4bbbce26/: CGamePlay.cpp
src/: CCampaing.cpp  CCampaing.h  CChart.cpp  CChart.h  CCharter.cpp  CCharter.h  CControls.cpp  CControls.h  CEngine.cpp  CEngine.h  CFonts.cpp  CFonts.h  CGPPFileMGR.cpp  CGPPFileMGR.h  CGamePlay.cpp  CGamePlay.h  CGuitars.cpp  CGuitars.h  CLanguageManager.cpp  CLanguageManager.h  CLog.cpp  CLog.h  CLuaFunctions.cpp  CLuaFunctions.hpp  CLuaH.cpp  CLuaH.hpp  CMenu.cpp  CMenu.h  CMultiThreadPool.h  CMultiplayer.cpp  CMultiplayer.h  CParticle.cpp  CParticle.h  CPlayer.cpp  CPlayer.h  CSaveSystem.cpp  CSaveSystem.h  CShader.cpp  CShader.h  CSocket.h  (+14 more)
src/Lua/: lapi.h  lauxlib.h  lcode.h  ldo.h  lfunc.h  lgc.h  llex.h  llimits.h  lmem.h  lobject.h  lopcodes.h  lparser.h  lstate.h  lstring.h  ltable.h  ltm.h  lua.h  luac.c  luaconf.h  lundump.h  lvm.h  lzio.h
src/utf8/: checked.h  core.h  unchecked.h
tests/: CMakeLists.txt
